--- a/src/index.css
+++ b/src/index.css
@@ -119,11 +119,30 @@ header {
   width: 300px;
   float:right	;
 }
+.benefits-container {
+  background-color: #F2F2F2;
+}
+.benefits-sub-container {
+  padding: 5px 15px;
+  display: block;
+  text-align: center;
+}
+.benefits-sub-container span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.benefits-sub-container p {
+  font-family: Arial;
+  font-size: 16px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 /* Mobile devices end */
 @media(min-width:480px){
   /* Mobile (landscape) devices start */
-   
+  
   /* Mobile (landscape) devices end */
 }
 
@@ -147,7 +166,9 @@ header {
       display: inline;
       padding:0px 5px;
     }
-    
+    .benefits-container {
+      display: flex;
+    }
   /* Tablet devices end */
 }
 
@@ -166,5 +187,15 @@ header {
 
 @media(min-width:1200px){
   /* Desktop devices start */
+  .benefits-container{
+    display: table;
+    width: 100%;
+    height: 50px;
+  }
+  .benefits-sub-container {
+    padding: 0px;
+    display: table-cell;
+    vertical-align: middle;
+}
   /* Desktop devices end */
 }
