--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ header {
   padding:5px 0px;
   font-family:'Montserrat-Regular';
   font-size: 16px;
-  
+  cursor: pointer;
 }
 .left-nav-ul-items.selected {
     font-weight: bold;
